--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==4.2.4
 django-crispy-forms==2.0
 django-filter==23.2
 django-phonenumber-field==7.1.0
+djangorestframework==3.14.0
 flake8==6.1.0
 Jinja2==3.1.2
 kombu==5.3.2
@@ -26,6 +27,7 @@ pycodestyle==2.11.0
 pyflakes==3.1.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 reportlab==4.0.4
 six==1.16.0
 soupsieve==2.5
