--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==7.3.2
 crispy-bootstrap5==0.7
 Django==4.2.4
 django-crispy-forms==2.0
@@ -41,6 +42,7 @@ pyflakes==3.1.0
 pytest==7.4.2
 pytest-assert-utils==0.3.1
 pytest-common-subject==1.0.6
+pytest-cov==4.1.0
 pytest-django==4.5.2
 pytest-fixture-order==0.1.4
 pytest-lambda==1.3.0
