--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ billiard==4.1.0
 canvas==0.3
 celery==5.3.4
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.0
 click==8.1.7
 click-didyoumean==0.3.0
@@ -38,6 +39,7 @@ pluggy==1.3.0
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
 pycodestyle==2.11.0
+pycparser==2.21
 pyflakes==3.1.0
 pytest==7.4.2
 pytest-assert-utils==0.3.1
@@ -49,6 +51,7 @@ pytest-lambda==1.3.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+rabbitmq==0.2.0
 reportlab==4.0.4
 requests==2.31.0
 simplejson==3.19.1
